[gd_scene load_steps=20 format=3 uid="uid://c2jfhix8jxbyb"]

[ext_resource type="PackedScene" uid="uid://j7wjwnhaab35" path="res://market/shoppingGame/scenes/selected_fruits.tscn" id="1_07e7i"]
[ext_resource type="Script" path="res://market/shoppingGame/scripts/shooping_game.gd" id="1_klr72"]
[ext_resource type="Texture2D" uid="uid://dd0n511aru7on" path="res://resource/assets/backgrounds/Glass_game_bg.jpeg" id="2_ha7sn"]
[ext_resource type="PackedScene" uid="uid://dvuxxb45pqoeq" path="res://market/shoppingGame/scenes/shooping_zone.tscn" id="2_wuip8"]
[ext_resource type="PackedScene" uid="uid://dssf5oc3yc3eo" path="res://market/shoppingGame/scenes/shopping_list.tscn" id="3_feje7"]
[ext_resource type="Theme" uid="uid://ccdfqfq2wd0rn" path="res://resource/themes/button_theme.tres" id="4_f7tsx"]
[ext_resource type="Texture2D" uid="uid://tibn6dnhd1ba" path="res://resource/assets/ui/continue.png" id="5_bal6b"]
[ext_resource type="Texture2D" uid="uid://cy4nuid3657ce" path="res://resource/assets/ui/back.png" id="5_dekyx"]
[ext_resource type="Theme" uid="uid://lrv305xmhug6" path="res://resource/themes/button_theme_secondary.tres" id="7_wqlge"]
[ext_resource type="Texture2D" uid="uid://kdjwokwykllq" path="res://resource/assets/ui/delete_icon.png" id="8_kgsls"]
[ext_resource type="Texture2D" uid="uid://7xobruo4cm1n" path="res://resource/assets/ui/check.png" id="9_8boye"]
[ext_resource type="Script" path="res://market/shoppingGame/scripts/ScoreBoard.gd" id="10_2uwub"]
[ext_resource type="StyleBox" uid="uid://ctjrxdnqe5mbx" path="res://resource/slyles/default_form_bg.tres" id="11_aa2lg"]
[ext_resource type="PackedScene" uid="uid://dfpuqgbudul5e" path="res://shared/scenes/counter.tscn" id="13_em1ne"]
[ext_resource type="PackedScene" uid="uid://b3x5mugdjoywk" path="res://shared/scenes/score_screen.tscn" id="14_o6i4a"]
[ext_resource type="PackedScene" uid="uid://c1vbi6b01jidb" path="res://shared/scenes/pause_menu.tscn" id="15_gtisa"]
[ext_resource type="PackedScene" uid="uid://djm7mvk00g3xv" path="res://shared/effects/positive_sound_effect.tscn" id="16_yur00"]
[ext_resource type="PackedScene" uid="uid://cvmjnkf3rks4o" path="res://shared/effects/negative_sound_effect.tscn" id="17_we4kb"]
[ext_resource type="PackedScene" uid="uid://bixtxyixju6yv" path="res://shared/effects/map_music.tscn" id="18_pynpm"]

[node name="ShoopingGame" type="Node2D"]
script = ExtResource("1_klr72")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(556, -137.5)
scale = Vector2(1.66602, 1.53418)
texture = ExtResource("2_ha7sn")

[node name="SelectedFruits" parent="." instance=ExtResource("1_07e7i")]
visible = false
position = Vector2(0, 486)

[node name="ShoopingZone" parent="." instance=ExtResource("2_wuip8")]

[node name="ShoppingList" parent="." instance=ExtResource("3_feje7")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StoreButtons" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_top = 178.0
offset_right = 1152.0
offset_bottom = 322.0

[node name="Left" type="Button" parent="CanvasLayer/StoreButtons"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 32.0
offset_right = 90.0
grow_vertical = 2
theme = ExtResource("4_f7tsx")
icon = ExtResource("5_dekyx")

[node name="Rigth" type="Button" parent="CanvasLayer/StoreButtons"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_right = -32.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_f7tsx")
icon = ExtResource("5_bal6b")

[node name="GameButtons" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -161.0
grow_horizontal = 2
grow_vertical = 0

[node name="Clear" type="Button" parent="CanvasLayer/GameButtons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -27.5
offset_right = 82.0
offset_bottom = 27.5
grow_vertical = 2
theme = ExtResource("7_wqlge")
icon = ExtResource("8_kgsls")
icon_alignment = 1

[node name="Send" type="Button" parent="CanvasLayer/GameButtons"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -27.5
offset_right = -32.0
offset_bottom = 27.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_f7tsx")
icon = ExtResource("9_8boye")
icon_alignment = 1

[node name="MusicScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/MusicScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("11_aa2lg")

[node name="Label" type="Label" parent="CanvasLayer/MusicScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.5
offset_top = -24.5
offset_right = 168.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "PODRAS RECOGER LAS FRUTAS Y VERDURAS
CUANDO LA MUSICA TERMINE"
horizontal_alignment = 1

[node name="ScoreBoard" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("10_2uwub")

[node name="TimeScore" type="Control" parent="CanvasLayer/ScoreBoard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_right = 55.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="CanvasLayer/ScoreBoard/TimeScore"]
layout_mode = 0
offset_right = 111.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/ScoreBoard/TimeScore"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 71.0
offset_bottom = 30.0
text = "TIEMPO:"

[node name="TimeLabel" type="Label" parent="CanvasLayer/ScoreBoard/TimeScore"]
layout_mode = 0
offset_left = 76.0
offset_top = 8.0
offset_right = 105.0
offset_bottom = 31.0
text = "000"

[node name="ScoreControl" type="Control" parent="CanvasLayer/ScoreBoard"]
layout_mode = 1
anchors_preset = 0
offset_right = 123.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="CanvasLayer/ScoreBoard/ScoreControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/ScoreBoard/ScoreControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 19.0
offset_bottom = 11.5
grow_vertical = 2
text = "  PUNTAJE"
horizontal_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/ScoreBoard/ScoreControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "000"
vertical_alignment = 1

[node name="Counter" parent="CanvasLayer" instance=ExtResource("13_em1ne")]

[node name="ScoreScreen" parent="CanvasLayer" instance=ExtResource("14_o6i4a")]
visible = false
reload_scene = "res://market/shoppingGame/scenes/shopping_game_intro.tscn"

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("15_gtisa")]
visible = false
offset_bottom = -594.0

[node name="MusicTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SelectTimer" type="Timer" parent="."]

[node name="PositiveSoundEffect" parent="." instance=ExtResource("16_yur00")]

[node name="NegativeSoundEffect" parent="." instance=ExtResource("17_we4kb")]

[node name="MapMusic" parent="." instance=ExtResource("18_pynpm")]

[connection signal="start_challenge" from="ShoppingList" to="." method="_on_shopping_list_start_challenge"]
[connection signal="pressed" from="CanvasLayer/StoreButtons/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="CanvasLayer/StoreButtons/Rigth" to="." method="_on_rigth_pressed"]
[connection signal="pressed" from="CanvasLayer/GameButtons/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="CanvasLayer/GameButtons/Send" to="." method="_on_send_pressed"]
[connection signal="start_game" from="CanvasLayer/Counter" to="." method="_on_counter_start_game"]
[connection signal="timeout" from="MusicTimer" to="." method="_on_music_timer_timeout"]
[connection signal="timeout" from="SelectTimer" to="." method="_on_select_timer_timeout"]
